Fix the first background img not showing after animation

--- a/style.css
+++ b/style.css
@@ -76,11 +76,11 @@ header {
   background-repeat: no-repeat;
   opacity: 0;
   z-index: 0;
-  animation: imageAnimation 20s linear infinite; 
+  animation: imageAnimation 25s linear infinite; 
 }
 
 .slideshow li:nth-child(1) { 
-  background-image: url(https://images.pexels.com/photos/769289/pexels-photo-769289.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260) 
+  background-image: url(https://images.pexels.com/photos/769289/pexels-photo-769289.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
 }
 .slideshow li:nth-child(2) { 
   background-image: url(https://images.pexels.com/photos/842545/pexels-photo-842545.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
